--- a/app/views/pages/_project_menu.html.erb
+++ b/app/views/pages/_project_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-8">
-    <a href="#" class="prj-MenuItem">
+    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           プロダクトバックログ
@@ -20,10 +20,10 @@
           </li>
         </ul>
       </div>
-    </a>
+    <% end -%>
   </div>
   <div class="col-lg-8">
-    <a href="#" class="prj-MenuItem">
+    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           タスクかんばん
@@ -40,10 +40,10 @@
           </li>
         </ul>
       </div>
-    </a>
+    <% end -%>
   </div>
   <div class="col-lg-8">
-    <a href="#" class="prj-MenuItem">
+    <%= link_to page_url(:release_plan), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           リリース計画
@@ -60,12 +60,12 @@
           </li>
         </ul>
       </div>
-    </a>
+    <% end -%>
   </div>
 </div>
 <div class="row">
   <div class="col-lg-8">
-    <a href="#" class="prj-MenuItem">
+    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           イテレーション
@@ -82,10 +82,10 @@
           </li>
         </ul>
       </div>
-    </a>
+    <% end -%>
   </div>
   <div class="col-lg-8">
-    <a href="#" class="prj-MenuItem">
+    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           チーム
@@ -102,10 +102,10 @@
           </li>
         </ul>
       </div>
-    </a>
+    <% end -%>
   </div>
   <div class="col-lg-8">
-    <a href="#" class="prj-MenuItem">
+    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           プロジェクト
@@ -125,6 +125,6 @@
           </li>
         </ul>
       </div>
-    </a>
+    <% end -%>
   </div>
 </div>
