use form control lg

--- a/app/views/pages/edit_feature.html.erb
+++ b/app/views/pages/edit_feature.html.erb
@@ -16,7 +16,7 @@
             <label>
               フィーチャーの内容
             </label>
-            <textarea class="form-control" rows="3" placeholder="">ユーザーとして、Todoリストが自動で保存されて欲しい。それは、保存するのを忘れることがあるからだ。</textarea>
+            <textarea class="form-control form-control-lg" rows="3" placeholder="">ユーザーとして、Todoリストが自動で保存されて欲しい。それは、保存するのを忘れることがあるからだ。</textarea>
           </div>
           <div class="form-group">
             <label class="frm-Element-block">
