--- a/app/views/pages/new_feature.html.erb
+++ b/app/views/pages/new_feature.html.erb
@@ -8,14 +8,14 @@
   </div>
 </div>
 <div class="row sw-Main">
-  <div class="col-lg-13 mx-auto">
+  <div class="col-lg-14 mx-auto">
     <div class="fe-Background fe-Background-lg">
       <form>
         <div class="form-group">
           <label>
             フィーチャーの内容
           </label>
-          <textarea class="form-control" rows="3" placeholder="ex: ユーザーストーリー"></textarea>
+          <textarea class="form-control form-control-lg" rows="3" placeholder="ex: ユーザーストーリー"></textarea>
         </div>
         <div class="frm-Actions">
           <button class="btn btn-success">
