fix iteration title

--- a/app/views/pages/show_project.html.erb
+++ b/app/views/pages/show_project.html.erb
@@ -51,7 +51,7 @@
     </div>
   </div>
 </div>
-<div class="row sw-Main">
+<div class="row sw-Main-lg">
   <div class="col-lg-22 mx-auto">
     <%= render 'project_menu' %>
   </div>
