--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -8,8 +8,9 @@
 }
 
 .prj-Iteration_Title {
+  display: inline-block;
   margin-top: 1rem;
-  padding: .25rem 1rem;
+  padding: .25rem .75rem;
   font-size: $font-size-sm;
   font-weight: bold;
   background-color: $secondary;
