fix project menu

--- a/app/views/pages/_project_menu.html.erb
+++ b/app/views/pages/_project_menu.html.erb
@@ -64,27 +64,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-8">
-    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
-      <div class="prj-MenuItem_Header">
-        <h3 class="prj-MenuItem_Title">
-          イテレーション
-        </h3>
-      </div>
-      <div class="prj-MenuItem_Body">
-        <i class="prj-Icon prj-Icon_Iteration"></i>
-        <ul class="prj-MenuItem_Help">
-          <li>
-            スケジュール
-          </li>
-          <li>
-            イテレーションの設定
-          </li>
-        </ul>
-      </div>
-    <% end -%>
-  </div>
-  <div class="col-lg-8">
+  <div class="col-lg-8 offset-lg-4">
     <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
