--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -1,5 +1,5 @@
 <div class="row sw-Main sw-Main-lg">
-  <div class="col-lg-12 mx-auto">
+  <div class="col-lg-13 mx-auto">
     <div class="sw-Section">
       <div class="sw-Section_Header">
         <h2 class="sw-Section_Title">
@@ -10,10 +10,10 @@
         <div class="d-flex">
           <ul class="sw-List">
             <li>
-              <%= link_to 'Leave me alone!', '#' %>
+              <%= link_to 'Leave me alone!', page_url(:show_project), class: 'sw-Strong' %>
             </li>
             <li>
-              <%= link_to 'Laminate', '#' %>
+              <%= link_to 'Laminate', '#', class: 'sw-Strong' %>
             </li>
           </ul>
           <div class="ml-auto">
