--- a/app/views/application/_global_nav.html.erb
+++ b/app/views/application/_global_nav.html.erb
@@ -1,5 +1,5 @@
 <nav class="nav-Global navbar navbar-expand-md navbar-light bg-light">
-  <a class="nav-Global_AppName navbar-brand" href="/">Laminate</a>
+  <%= link_to 'Laminate', page_url(:project_list), class: 'nav-Global_AppName navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
