--- a/app/views/pages/release_plan.html.erb
+++ b/app/views/pages/release_plan.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="breadcrumbs">
-    <%= link_to 'Leave me alone!', page_url(:project) -%>
+    <%= link_to 'Leave me alone!', page_url(:show_project) -%>
     <span class="current">
       リリース計画
     </span>
