--- a/app/views/pages/new_project.html.erb
+++ b/app/views/pages/new_project.html.erb
@@ -6,7 +6,7 @@
     </span>
   </div>
 </div>
-<div class="row sw-Main">
+<div class="row sw-Main-lg">
   <div class="col-lg-12 mx-auto">
     <div class="fe-Background fe-Background-lg">
       <form>
