--- a/app/views/pages/show_project.html.erb
+++ b/app/views/pages/show_project.html.erb
@@ -5,7 +5,7 @@
     </h1>
   </div>
 </div>
-<div class="row sw-Main">
+<div class="row sw-Main-lg">
   <div class="col-lg-7 mx-auto">
     <div class="prj-Iteration">
       <div class="prj-Iteration_Body">
