--- a/app/views/pages/_project_menu.html.erb
+++ b/app/views/pages/_project_menu.html.erb
@@ -23,7 +23,7 @@
     <% end -%>
   </div>
   <div class="col-lg-8">
-    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
+    <%= link_to page_url(:task_kanban), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           タスクかんばん
