--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -16,7 +16,7 @@ $purple:  #714CA5 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
-$yellow:  #FCE9B9 !default;
+$yellow:  #F9F6BB !default;
 $green:   #4FA533 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
