fix focus color

--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -32,7 +32,7 @@
   color: $body-color;
 
   &:hover {
-    box-shadow: 0 0 10px $yellow;
+    box-shadow: 0 0 10px $orange;
     color: $body-color;
   }
 }
