--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -62,3 +62,13 @@
   border-top: 1px solid $gray-100;
   padding: .75rem 1.5rem;
 }
+
+.sw-Check {
+  @extend .fa, .fa-check-circle;
+  font-size: 1.5rem;
+  color: $gray-500;
+}
+
+.sw-Check-marked {
+  color: theme-color('success');
+}
