--- a/app/views/pages/task_kanban.html.erb
+++ b/app/views/pages/task_kanban.html.erb
@@ -35,9 +35,25 @@
               </span>
               <%= link_to '確認する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
-            <span class="fe-Point fe-Summary_Point">
-              5
-            </span>
+            <div class="ml-auto">
+              <i class="sw-Check sw-Check-marked"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="kb-Row">
+        <div class="fe-Background kb-Row-mb">
+          <div class="fe-Summary_Body">
+            <div class="fe-Summary_Content st-Editable">
+              <span class="fe-Content">
+                ユーザーとして、Todoリストが自動で保存されて欲しい。
+                それは、保存するのを忘れることがあるからだ。
+              </span>
+              <%= link_to '確認する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
+            <div class="ml-auto">
+              <i class="sw-Check"></i>
+            </div>
           </div>
         </div>
       </div>
