--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -6,6 +6,10 @@
   width: 100%;
   margin-bottom: .5rem;
   background-color: $yellow;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .tsk-Content {
@@ -26,4 +30,14 @@
   background-color: rgba(255,255,255,.7);
   font-weight: bold;
   border-radius: $font-size-base;
+}
+
+.tsk-Background-add {
+  height: 4.8rem;
+  background-color: lighten($yellow, 8%);
+}
+
+.tsk-Add {
+  @extend .d-flex, .align-items-center, .justify-content-center;
+  height: 100%;
 }
