--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -35,6 +35,7 @@
 .tsk-Background-add {
   height: 4.8rem;
   background-color: lighten($yellow, 8%);
+  border: 3px dashed $gray-200;
 }
 
 .tsk-Add {
