--- a/app/views/pages/task_kanban.html.erb
+++ b/app/views/pages/task_kanban.html.erb
@@ -62,7 +62,9 @@
               </span>
               <div class="tsk-Footer">
                 <div class="tsk-Workers">
-                  <%= image_tag 'mob_e.png', class: 'usr-Avatar-xs' %>
+                  <%= link_to '#', class: 'sw-IconButton' do %>
+                    <i class="icon-Prefix tsk-SignUp_Icon"></i>
+                  <% end -%>
                 </div>
                 <span class="tsk-Time">
                   0.5h
