--- a/app/views/pages/task_kanban.html.erb
+++ b/app/views/pages/task_kanban.html.erb
@@ -57,9 +57,12 @@
         <div class="kb-Row">
           <div class="kb-Column">
             <div class="tsk-Background">
-              <span class="tsk-Content">
-                動作確認
-              </span>
+              <div class="st-Editable">
+                <span class="tsk-Content">
+                  動作確認
+                </span>
+                <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              </div>
               <div class="tsk-Footer">
                 <div class="tsk-Workers">
                   <%= link_to '#', class: 'sw-IconButton' do %>
@@ -82,9 +85,12 @@
           </div>
           <div class="kb-Column">
             <div class="tsk-Background">
-              <span class="tsk-Content">
-                View実装
-              </span>
+              <div class="st-Editable">
+                <span class="tsk-Content">
+                  View実装
+                </span>
+                <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              </div>
               <div class="tsk-Footer">
                 <div class="tsk-Workers">
                   <%= image_tag 'mob_b.png', class: 'usr-Avatar-xs' %>
@@ -95,9 +101,12 @@
               </div>
             </div>
             <div class="tsk-Background">
-              <span class="tsk-Content">
-                App実装
-              </span>
+              <div class="st-Editable">
+                <span class="tsk-Content">
+                  App実装
+                </span>
+                <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              </div>
               <div class="tsk-Footer">
                 <div class="tsk-Workers">
                   <%= image_tag 'mob_a.png', class: 'usr-Avatar-xs' %>
@@ -111,9 +120,12 @@
           </div>
           <div class="kb-Column">
             <div class="tsk-Background">
-              <span class="tsk-Content">
-                UI設計
-              </span>
+              <div class="st-Editable">
+                <span class="tsk-Content">
+                  UI設計
+                </span>
+                <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              </div>
               <div class="tsk-Footer">
                 <div class="tsk-Workers">
                   <%= image_tag 'mob_a.png', class: 'usr-Avatar-xs' %>
@@ -126,9 +138,12 @@
               </div>
             </div>
             <div class="tsk-Background">
-              <span class="tsk-Content">
-                モデル設計・実装
-              </span>
+              <div class="st-Editable">
+                <span class="tsk-Content">
+                  モデル設計・実装
+                </span>
+                <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              </div>
               <div class="tsk-Footer">
                 <div class="tsk-Workers">
                   <%= image_tag 'mob_c.png', class: 'usr-Avatar-xs' %>
