Reborn/task kanban (#26)
* fix margin top

* fix link

* v1

* fix focus color

* feature completion status

* add task

* decorate

* sign up

* edit task

--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -15,8 +15,8 @@ $indigo:  #6610f2 !default;
 $purple:  #714CA5 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #FCE9B9 !default;
+$orange:  #FCE9B9 !default;
+$yellow:  #F9F6BB !default;
 $green:   #4FA533 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
@@ -60,8 +60,8 @@ $input-color:                 $gray-900 !default;
 
 $input-border-color:        $gray-300 !default;
 $input-btn-focus-width:     .1rem !default;
-$input-focus-border-color:  $yellow !default;
-$input-btn-focus-color:     $yellow !default;
+$input-focus-border-color:  $orange !default;
+$input-btn-focus-color:     $orange !default;
 
 $paragraph-margin-bottom:   .5rem !default;
 
