--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -37,6 +37,11 @@
 
 .sw-Section {
   @include card;
+  margin-bottom: 1rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .sw-Section-align-center {
