--- a/app/views/pages/_project_menu.html.erb
+++ b/app/views/pages/_project_menu.html.erb
@@ -85,7 +85,7 @@
     <% end -%>
   </div>
   <div class="col-lg-8">
-    <%= link_to page_url(:product_backlog), class: 'prj-MenuItem' do %>
+    <%= link_to page_url(:show_team), class: 'prj-MenuItem' do %>
       <div class="prj-MenuItem_Header">
         <h3 class="prj-MenuItem_Title">
           チーム
