--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -42,7 +42,7 @@
         <%= link_to 'Relase Plan', page_url(:release_plan) %>
       </li>
       <li>
-        <%= link_to 'Invite people', page_url(:invite_people) %>
+        <%= link_to 'Invite people', page_url(:edit_team) %>
       </li>
     </ul>
   </div>
