--- a/app/views/pages/_project_menu.html.erb
+++ b/app/views/pages/_project_menu.html.erb
@@ -95,10 +95,10 @@
         <i class="prj-Icon prj-Icon_Team"></i>
         <ul class="prj-MenuItem_Help">
           <li>
-            メンバーの管理
+            メンバーの招待
           </li>
           <li>
-            メンバーの招待
+            チームからの離脱
           </li>
         </ul>
       </div>
