--- a/app/views/pages/show_team.html.erb
+++ b/app/views/pages/show_team.html.erb
@@ -11,7 +11,7 @@
     <div class="sw-Section">
       <div class="sw-Section_Header">
         <h2 class="sw-Section_Title">
-          このプロジェクトのメンバー
+          チームメンバー
         </h2>
       </div>
       <div class="sw-Section_Body">
@@ -57,6 +57,18 @@
           このURLを招待する人に共有してください。
         </p>
         <input type="text" value="http://location.to.join.team" class="form-control">
+      </div>
+    </div>
+    <div class="sw-Section">
+      <div class="sw-Section_Header">
+        <h2 class="sw-Section_Title">
+          チームからの離脱
+        </h2>
+      </div>
+      <div class="sw-Section_Body">
+        <button class="btn btn-danger">
+          このチームから離脱する
+        </button>
       </div>
     </div>
   </div>
