--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -12,6 +12,16 @@
   }
 }
 
+.tsk-Background-mock {
+  height: 4.8rem;
+  background-color: lighten($yellow, 8%);
+  border: 3px dashed $gray-200;
+}
+
+.tsk-Background-new {
+  padding: .75rem .125rem;
+}
+
 .tsk-Content {
   @include nf;
   display: block;
@@ -32,13 +42,7 @@
   border-radius: $font-size-base;
 }
 
-.tsk-Background-add {
-  height: 4.8rem;
-  background-color: lighten($yellow, 8%);
-  border: 3px dashed $gray-200;
-}
-
-.tsk-Add {
+.tsk-Mock {
   @extend .d-flex, .align-items-center, .justify-content-center;
   height: 100%;
 }
