--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -19,7 +19,7 @@
 }
 
 .tsk-Background-new {
-  padding: .75rem .125rem;
+  padding: .5rem;
 }
 
 .tsk-Content {
@@ -51,4 +51,24 @@
   @extend .fa, .fa-user-circle-o;
   color: theme-color('success');
   font-size: 1.375rem;
+}
+
+.tsk-Form_Group {
+  @extend .d-flex, .align-items-center;
+  margin: .25rem 0;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.tsk-Form_Multiple {
+  @extend .fa, .fa-times;
+  margin: 0 .5rem;
+  font-size: $font-size-lg;
+  color: $gray-800;
+}
+
+.tsk-Input_NOP {
+  width: 3rem !important;
 }
