--- a/app/views/pages/task_kanban.html.erb
+++ b/app/views/pages/task_kanban.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 <div class="row sw-Main">
-  <div class="col-lg-20 mx-auto">
+  <div class="col-lg-22 mx-auto">
     <div class="kb-Container">
       <div class="fe-Background">
         <div class="fe-Summary_Body">
@@ -78,23 +78,30 @@
               <div class="tsk-Background tsk-Background-new">
                 <form>
                   <input type="text" class="form-control" placeholder="タスクを入力...">
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-time"></i>
-                      </span>
+                  <div class="tsk-Form_Group">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">
+                          <i class="icon-time"></i>
+                        </span>
+                      </div>
+                      <input type="number" class="form-control" min="0" max="16" step="0.5" value="0.0">
+                      <div class="input-group-append">
+                        <span class="input-group-text">
+                          h
+                        </span>
+                      </div>
                     </div>
-                    <input type="text" class="form-control">
-                    <div class="input-group-append">
-                      <span class="input-group-text">
-                        h
-                      </span>
-                    </div>
+                    <i class="tsk-Form_Multiple"></i>
+                    <input type="number" class="form-control tsk-Input_NOP" min="1" value="1">
                   </div>
-                  <button class="btn btn-sm btn-success">
-                    <i class="icon-Add"></i>
-                    追加する
-                  </button>
+                  <div class="tsk-Form_Group frm-Actions">
+                    <button class="btn btn-sm btn-success">
+                      <i class="icon-Add"></i>
+                      追加する
+                    </button>
+                    <%= link_to 'キャンセル', page_url(:task_kanban), class: 'frm-Action_Cancel frm-Action_Cancel-sm' %>
+                  </div>
                 </form>
               </div>
             <% else -%>
