--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -19,7 +19,7 @@
 }
 
 .tsk-Background-new {
-  padding: .5rem;
+  padding: .25rem;
 }
 
 .tsk-Content {
@@ -32,12 +32,11 @@
   margin-top: .5rem;
 }
 
-.tsk-Time {
+.tsk-Estimation {
   @extend .d-flex, .align-items-center;
   @extend .ml-auto;
-  height: 1.5rem;
-  padding: 0 .5rem;
-  background-color: rgba(255,255,255,.7);
+  padding: .125rem .5rem;
+  background-color: rgba(255,255,255,.8);
   font-weight: bold;
   border-radius: $font-size-base;
 }
@@ -62,13 +61,12 @@
   }
 }
 
-.tsk-Form_Multiple {
-  @extend .fa, .fa-times;
+.tsk-Input_Multiplier {
   margin: 0 .5rem;
   font-size: $font-size-lg;
-  color: $gray-800;
+  font-weight: bold;
 }
 
 .tsk-Input_NOP {
-  width: 3rem !important;
+  width: 10rem !important;
 }
