--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -67,9 +67,15 @@
   padding: 1.25rem 1.5rem 1.75rem;
 }
 
+.sw-Section_Body-thin {
+  padding: 1.25rem 1.5rem .5rem;
+}
+
 .sw-Section_Footer {
+  @extend .d-flex;
   border-top: 1px solid $gray-100;
-  padding: .75rem 1.5rem;
+  margin-top: 1.5rem;
+  padding: .5rem 0 0;
 }
 
 .sw-Check {
