replace note with acceptance criteria

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import 'user';
 @import 'product_backlog';
 @import 'feature';
+@import 'note';
 @import 'release_plan';
 @import 'project';
 @import 'team';
