--- a/app/views/pages/sign_in.html.erb
+++ b/app/views/pages/sign_in.html.erb
@@ -1,6 +1,7 @@
+<% content_for(:body_bg_class) { 'pub-Background' } %>
 <div class="row">
   <div class="col-lg-8 mx-auto">
-    <div class="pub-Container">
+    <div class="pub-Container_SignIn">
       <h1 class="pub-AppName">
         Laminate
       </h1>
