--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -1,11 +1,20 @@
-.pub-Container {
-  margin-top: 10vh;
+.pub-Background {
+  height: 100vh;
+  background: rgb(113,76,165);
+  background: linear-gradient(176deg, rgba(113,76,165,1) 0%, rgba(140,98,200,1) 100%, rgba(0,212,255,1) 100%);
+  background-color: theme-color('primary');
+}
+
+.pub-Container_SignIn {
+  @include card;
+  @include padding-lg;
+  margin-top: 15vh;
   text-align: center;
 }
 
 .pub-AppName {
-  font-size: 4.5rem;
-  margin-bottom: 2.5rem;
+  font-size: 2rem;
+  margin: 1rem 0 2rem;
   font-weight: bold;
   color: $purple;
 }
