--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,8 @@
 body {
   padding-bottom: 3rem;
 }
+
+.turbolinks-progress-bar {
+  background: rgb(113,76,165);
+  background: linear-gradient(90deg, rgba(113,76,165,1) 0%, rgba(79,165,51,1) 100%, rgba(0,212,255,1) 100%);
+}
