activate sign up link

--- a/app/views/application/_global_nav.html.erb
+++ b/app/views/application/_global_nav.html.erb
@@ -4,8 +4,6 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <% if current_user -%>
-      <%= render 'user_menu' %>
-    <% end -%>
+    <%#= render 'user_menu' %>
   </div>
 </nav>
