--- a/app/views/application/_global_nav.html.erb
+++ b/app/views/application/_global_nav.html.erb
@@ -4,6 +4,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <%#= render 'user_menu' %>
+    <% if signed_in? -%>
+      <%= render 'user_menu' %>
+    <% end %>
   </div>
 </nav>
