--- a/app/views/application/_user_menu.html.erb
+++ b/app/views/application/_user_menu.html.erb
@@ -1,7 +1,7 @@
 <ul class="navbar-nav ml-auto">
   <li class="nav-item dropdown">
     <a class="nav-item nav-link dropdown-toggle" href="#" id="navUserMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <%= image_tag 'mob_e.png', class: 'usr-Avatar usr-Avatar-sm' %>
+      <%= image_tag current_user.avatar_url, alt: current_user.name, class: 'usr-Avatar usr-Avatar-sm' %>
     </a>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navUserMenuLink">
       <%= link_to '', method: :delete, id: 'app_sign_out', class: 'dropdown-item' do %>
