--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body class="<%= content_for(:body_bg_class) || 'app-Background' %>">
+    <%= render 'flash' %>
     <%= render 'global_nav' %>
     <div class="container">
       <%= yield %>
