Feature/google sign up (#35)
* setup omniauth google oauth2

* activate sign up link

* wip

* sign up by oauth command

* add paths

* command returns user_id when succeeded

* sign up request

* refactor

* sign in

* sign up or sign in message

* fix flash style

* show same message

* set auth hash

* oauth sign in helper

* already signed in

* sign up helper

* add alias form sign up and sign in

* refactor

* more studiously

--- a/app/views/application/_global_nav.html.erb
+++ b/app/views/application/_global_nav.html.erb
@@ -4,8 +4,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <% if current_user -%>
+    <% if signed_in? -%>
       <%= render 'user_menu' %>
-    <% end -%>
+    <% end %>
   </div>
 </nav>
