--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -9,7 +9,7 @@
       <div class="sw-Section_Body sw-Section_Body-thin">
         <ul class="sw-List">
           <li>
-            <%= link_to 'Leave me alone!', page_url(:show_project), class: 'sw-Strong' %>
+            <%= link_to 'Leave me alone!', page_url(:show_project), class: 'sw-Strong sw-Large' %>
           </li>
           <li>
             <%= link_to 'Laminate', '#', class: 'sw-Strong' %>
@@ -17,7 +17,7 @@
         </ul>
         <div class="sw-Section_Footer">
           <div class="ml-auto">
-            <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do %>
+            <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success sw-Large' do %>
               <i class="icon-Prefix icon-Add"></i>
               プロジェクトを追加する
             <% end -%>
