fix project in project list

--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -1,5 +1,5 @@
 <div class="row sw-Main-xl">
-  <div class="col-lg-13 mx-auto">
+  <div class="col-lg-14 mx-auto">
     <div class="sw-Section">
       <div class="sw-Section_Header">
         <h2 class="sw-Section_Title">
@@ -12,12 +12,12 @@
             <%= link_to 'Leave me alone!', page_url(:show_project), class: 'sw-Strong sw-Large' %>
           </li>
           <li>
-            <%= link_to 'Laminate', '#', class: 'sw-Strong' %>
+            <%= link_to 'Laminate', '#', class: 'sw-Strong sw-Large' %>
           </li>
         </ul>
         <div class="sw-Section_Footer">
           <div class="ml-auto">
-            <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success sw-Large' do %>
+            <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do %>
               <i class="icon-Prefix icon-Add"></i>
               プロジェクトを追加する
             <% end -%>
