--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,1 +1,24 @@
-Projects
+<div class="row sw-Main-xl">
+  <div class="col-lg-14 mx-auto">
+    <div class="sw-Section">
+      <div class="sw-Section_Header">
+        <h2 class="sw-Section_Title">
+          <%=t '.title' %>
+        </h2>
+      </div>
+      <div class="sw-Section_Body sw-Section_Body-thin">
+        <p class="sw-Large">
+          <%=t '.empty' %>
+        </p>
+        <div class="sw-Section_Footer">
+          <div class="ml-auto">
+            <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do %>
+              <i class="icon-Prefix icon-Add"></i>
+              <%=t '.add' %>
+            <% end -%>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
