--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,7 +12,7 @@
         </p>
         <div class="sw-Section_Footer">
           <div class="ml-auto">
-            <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do %>
+            <%= link_to new_project_url, class: 'btn btn-sm btn-success' do %>
               <i class="icon-Prefix icon-Add"></i>
               <%=t '.add' %>
             <% end -%>
