--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,11 +1,4 @@
-<div class="row">
-  <div class="breadcrumbs">
-    <%= link_to 'あなたのプロジェクト', projects_url -%>
-    <span class="current">
-      新しいプロジェクト
-    </span>
-  </div>
-</div>
+<% breadcrumb :new_project %>
 <div class="row sw-Main-lg">
   <div class="col-lg-12 mx-auto">
     <div class="fe-Background fe-Background-lg">
