rename User => Person

--- a/app/views/application/_global_nav.html.erb
+++ b/app/views/application/_global_nav.html.erb
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <% if signed_in? -%>
-      <%= render 'user_menu' %>
+      <%= render 'person_menu' %>
     <% end %>
   </div>
 </nav>
